namespace java com.moseeker.thrift.gen.dao.struct.profiledb
namespace py thrift_gen.gen.dao.struct.profiledb


struct ProfileAttachmentDO {


}


struct ProfileAwardsDO {


}


struct ProfileBasicDO {


}


struct ProfileCompletenessDO {


}


struct ProfileCredentialsDO {


}


struct ProfileEducationDO {


}


struct ProfileImportDO {


}


struct ProfileIntentionDO {


}


struct ProfileIntentionCityDO {


}


struct ProfileIntentionIndustryDO {


}


struct ProfileIntentionPositionDO {


}


struct ProfileLanguageDO {


}


struct ProfileOtherDO {


}


struct ProfileProfileDO {


}


struct ProfileProjectexpDO {


}


struct ProfileSkillDO {


}


struct ProfileWorkexpDO {


}


struct ProfileWorksDO {


}


struct SchemaMigrationsDO {


}
